Fix spacing on underline links
My last fix made it so that there was a white gap in my links that was
noticeable and a bit jarring.

--- a/source/stylesheets/components/_navigation.scss
+++ b/source/stylesheets/components/_navigation.scss
@@ -3,19 +3,20 @@
 }
 
 .nav {
-  li.underline {
+  li.underline a {
     border-bottom: 2px solid $brand-secondary
   }
 
   li {
     a {
       color: $brand-secondary;
+      margin-bottom: 0;
       &:hover {
         color: $body-bg;
       }
 
       &.active {
-        margin-bottom: 3px;
+        padding-bottom: 8px;
       }
     }
   }
